# JFrog-Artifactory-CLI

./: ArtifactCli.py  README.md  artifactclimain.py  pyproject.toml  requirements.txt
configs/: endpoints.py  envs.py
controllers/: artifactory.py
interfaces/: jfrog_api.py
tests/: test_artifactcli.py
