[tool.poetry]
name = "artifactCli"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["razchn <Razchn@gmail.com>"]

[tool.poetry.scripts]
artifactcli = "artifactclimain:app"

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.3.2"}
requests = {extras = ["all"], version = "^2.25.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
